pkg/lang/testdata/ub/constraints/valid/check-constraints-collects-multiple.ub
constraints: [
  { kind: exactly-one-of, fields: [input.a, input.b] },
  { kind: required-together, fields: [input.c, input.d] },
]
