pkg/lang/testdata/ub/constraints/invalid/unknown-key.ub
constraints: [
  { kind: required-together, fields: [var.a, var.b], message: 'x' },
]
